tests/NormalTests/paczka1/small_fuzzy/80551650.err
Error in line 2: QEW6 S623 46,6
Error in line 4: QEW6 S66 57,8
Error in line 7: QEW6 S22 89,8
Error in line 10: jZuqhR19j S507 57,4
Error in line 11: jZuqhR19j S66 21,3
